# precondition

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
precondition/: __init__.py  distributed_shampoo.py  distributed_shampoo_test.py  precondition_test.py  quantization_utils.py  sm3.py  sm3_test.py
precondition/datamix_gemma/: Pretokenization_for_Dolly,_MetaMath,_and_CodeAlpaca,_OpenWebMath.ipynb  Pretokenizing_wikipedia.ipynb  README.md  Wikipedia_processing.ipynb  bandit_loop.py  confusion_matrix_calc.py  cross_compile.py  deconstructed_sampler.py  deterministic_strategy_bandit_loop.py  finetune.py  finetune_eval_measurement.py  finetune_utils.py  finetuning_experiment.py  pretokenization.ipynb  random_baseline.py  snr_calculation.py  training_loop.py
precondition/datamix_gemma/dataset_builders/: __init__.py  dataset_builder.py  gsm8k_dataset_builder.py  mbpp_dataset_builder.py  mtnt_dataset_builder.py  open_orca_dataset_builder.py  orca_math_dataset_builder.py  preprocessed_codealpaca_dataset_builder.py  preprocessed_dolly_dataset_builder.py  preprocessed_gsm8k_dataset_builder.py  (+5 more)
precondition/oco/: algorithms.py  datasets.py  sweep.py  train.py
precondition/tearfree/: dynamic_sketchy.py  dynamic_sketchy_test.py  grafting.py  grafting_test.py  momentum.py  momentum_test.py  optimizer.py  optimizer_smoke_test.py  optimizer_test.py  praxis_shim.py  reallocation.py  reallocation_test.py  reshaper.py  reshaper_test.py  second_order.py  shampoo.py  shampoo_test.py  sketchy.py  sketchy_test.py
(+15 files in other folders)
